@@ -214,6 +214,7 @@
                             --add-opens java.base/java.lang.invoke=ALL-UNNAMED
                             --add-opens java.base/java.io=ALL-UNNAMED
                             -XX:+EnableDynamicAgentLoading
+                            -Dnet.bytebuddy.experimental=true
                         </argLine>
                     </configuration>
                 </plugin>
